[package]
name = "seren-memory-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for seren-memory: local cache, sync, and session bootstrap"
license = "MIT"
repository = "https://github.com/serenorg/seren-memory-sdk"
homepage = "https://serendb.com"
keywords = ["memory", "ai", "agent", "sqlite", "vector"]
categories = ["database", "caching"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
